Got basic posting tweets function working

--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,6 @@
 		"icons" : {"227" : "Icon.png"},
 		"action": {"default_popup": "popup.html", "default_icon": "Icon.png"},
         "background": {"service_worker": "background.js"},
-		"permissions": ["storage", "activeTab", "scripting", "tabs"]
+		"permissions": ["storage", "activeTab", "scripting", "tabs"],
+		"host_permissions": ["https://thawing-ocean-48836.herokuapp.com/*"]
 }
